# family-schedulekit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-NONCOMMERCIAL  LICENSING.md  README.md  makefile  pyproject.toml  trufflehog-exclude
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
examples/: resolved-CW1.json  resolved-CW42.json  resolved-CW47.json  resolved-CW6.json  resolved-CW8.json
schema/: example-schedule.generic.json  schedule-schema.json
src/family_schedulekit/: __init__.py  ai_helper.py  cli.py  colors.py  config.py  exporter.py  generator.py  models.py  resolver.py  resources.py  visualizer.py
src/family_schedulekit/data/: example-schedule.generic.json
tests/: test_ai_helper_pytest.py  test_cli_pytest.py  test_colors_pytest.py  test_config_pytest.py  test_exporter_pytest.py  test_resolve_pytest.py  test_resources_pytest.py  test_visualizer_pytest.py
