[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "family-schedulekit"
version = "1.2.0"
description = "AI-friendly schema + utilities for co-parenting / custody schedules (ISO week based)."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "BSD-3-Clause"}
dependencies = [
    "argcomplete",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[project.scripts]
family-schedulekit = "family_schedulekit.cli:main"

[project.urls]
Homepage = "https://github.com/WeekendSuperhero/family-schedulekit"
Repository = "https://github.com/WeekendSuperhero/family-schedulekit"
"Bug Tracker" = "https://github.com/WeekendSuperhero/family-schedulekit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/family_schedulekit"]